--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 				<p class='tytul'><b>Witaj na stronie BOP CODZIENNEJ!!!</b></p>
 				<p class='ostatnie'>Ostatnie wydanie: 26.09.2022</p>
 				<p><b>Nowy post!</b></p>
-				<p>Już za chwilę pojawi się kolejne wydanie BOP CODZIENNEJ!</p>
-				<p>Napisał TZET 23.09.2022 18:10</p>
+				<p>Radio już w produkcji!</p>
+				<p>Napisał TZ 29.09.2022</p>
 				<div style='position:absolute;left:3%;top:20%;'><img src='bopcodzienna27092022.png'></div>
 				<div style='position:absolute;right:3%;top:20%;'><img src='code.png'></div>
 				<div style='position:absolute;right:3%;top:40%;'><img src='menu.png'></div>
