--- a/komiksy.html
+++ b/komiksy.html
@@ -7,8 +7,10 @@
 				<p class='tytul'><b>BOP CODZIENNA - KOMIKSY</b></p>
 				<p class='ostatnie'>Ostatnie wydanie: 26.09.2022</p>
 				<p><b>KOMIKSY</b></p>
-				<p>Komiksy na ten moment mają już nigdy nie wrócić:(</p>
-				<p>Napisał TZET 24.09.2022 14:43</p>
+				<p>Zaczęliśmy produkcję komiksów!</p>
+				<p>Czytanie u TZ.</p>
+				<p>Komiksy można tylko przeczytać</p>
+				<p>a nie wziąć do siebie!</p>
 				<div style='position:absolute;left:3%;top:20%;'><img src='bopcodzienna27092022.png'></div>
 				<div style='position:absolute;right:3%;top:20%;'><img src='code.png'></div>
 				<div style='position:absolute;right:3%;top:40%;'><img src='menu.png'></div>
