--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				}
 				</script>
 				<p id='siema123'>W tym miejscu pojawi się wygenerowany kod.</p>
-				<button type='button' onclick='kod(5)'>GENERUJ</button>
+				<button class='gen' type='button' onclick='kod(5)'>GENERUJ</button>
 				</div>
 				<div style='position:absolute;right:3%;top:40%;'><img src='menu.png'></div>
 				<div style='position:absolute;right:5%;top:50%;'>
