--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				document.getElementById("siema123").innerHTML = 'Kod to: ' + ostatecznykod
 				}
 				</script>
-				<p id='siema123'>W tym miejscu pojawi się wygenerowany kod.</p>
+				<p class='code' id='siema123'>W tym miejscu pojawi się wygenerowany kod.</p>
 				<button class='gen' type='button' onclick='kod(5)'>GENERUJ</button>
 				</div>
 				<div style='position:absolute;right:3%;top:40%;'><img src='menu.png'></div>
