--- a/kontakt.html
+++ b/kontakt.html
@@ -26,8 +26,8 @@
 				document.getElementById("siema123").innerHTML = 'Kod to: ' + ostatecznykod
 				}
 				</script>
-				<p id='siema123'>W tym miejscu pojawi się wygenerowany kod.</p>
-				<button type='button' onclick='kod(5)'>GENERUJ</button>
+				<p class='code' id='siema123'>W tym miejscu pojawi się wygenerowany kod.</p>
+				<button class='gen' type='button' onclick='kod(5)'>GENERUJ</button>
 				</div>
 				<div style='position:absolute;right:3%;top:40%;'><img src='menu.png'></div>
 				<div style='position:absolute;right:5%;top:50%;'>
